# llm-from-scratch

./: .gitignore  03-attention.ipynb  3-3-通过自注意力机制关注输入的不同部分.ipynb  3-4-实现带可训练权重的自注意力机制.ipynb  3-5-利用因果注意力隐藏未来词汇.ipynb  3-6-将单头注意力扩展到多头注意力.ipynb  4-实现GPT架构.ipynb  5-训练大模型.ipynb  6-微调分类器.ipynb  7-微调遵循人类指令.ipynb  all_in_one.py  appendix-E-使用LoRA进行参数高效微调.ipynb  calc.py  download-classify-data.py  download_classify_data.py  download_instruction_data.py  gpt_model.py  llama.py  load_gpt2.py  main.py  multi_head_attention.html  pyproject.toml  self_attention.py  train.py
